<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="empty" />

    <plurals name="format_year_count">
        <item quantity="one">%d год</item>
        <item quantity="two">%d года</item>
        <item quantity="few">%d года</item>
        <item quantity="many">%d лет</item>
        <item quantity="other">%d лет</item>
    </plurals>

    <plurals name="format_quarter_count">
        <item quantity="one">%d квартал</item>
        <item quantity="few">%d кварталов</item>
        <item quantity="many">%d кварталов</item>
        <item quantity="other">%d кварталов</item>
    </plurals>

    <plurals name="format_month_count">
        <item quantity="one">%d месяц</item>
        <item quantity="few">%d месяца</item>
        <item quantity="many">%d месяцев</item>
        <item quantity="other">%d месяцев</item>
    </plurals>

    <plurals name="format_every_month">
        <item quantity="one">Каждый месяц</item>
        <item quantity="two">Каждые %d месяца</item>
        <item quantity="few">Каждые %d месяца</item>
        <item quantity="other">Каждые %d месяцев</item>
    </plurals>

    <plurals name="format_every_quarter">
        <item quantity="one">Каждый квартал</item>
        <item quantity="two">Каждые %d квартала</item>
        <item quantity="few">Каждые %d квартала</item>
        <item quantity="other">Каждые %d кварталов</item>
    </plurals>

    <plurals name="format_every_year">
        <item quantity="one">Каждый год</item>
        <item quantity="two">Каждые %d года</item>
        <item quantity="few">Каждые %d год</item>
        <item quantity="other">Каждые %d лет</item>
    </plurals>

    <string name="format_number_year">%d год</string>
    <string name="format_number_quarter">%d квартал</string>
    <string name="format_number_month">%d месяц</string>
    <string name="format_date_range">%s - %s</string>

    <string name="format_percent">%.2f %%</string>
    <string name="format_sum">%.2f</string>
    <string name="format_min_payment">Минимальный платеж: %.2f</string>

    <string name="once">Единоразовый</string>

    <string name="calculation_result">Расчет</string>

    <string name="standard_calculator">Калькулятор</string>
    <string name="percent_calculator">Калькулятор</string>

    <string name="calculate_payment">Расчитать ежемесячный платеж</string>
    <string name="calculate_payment_description">Расчитайте ежемесячный платеж по сумме кредита, процентной ставке и сроку кредита</string>

    <string name="calculate_percent">Расчитать процентную ставку</string>
    <string name="calculate_percent_description">Расчитайте процентную ставку по сумме кредита, ежемесячному платежу и сроку кредита</string>

    <string name="saved_calculations">Мои расчеты</string>
    <string name="saved_calculations_description">Сохраненяйте результаты расчетов для последующего их сравнения</string>

    <string name="settings">Настройки</string>
    <string name="settings_description">Настройте приложение под себя</string>

    <string name="annuity">Аннуитетный</string>
    <string name="differential">Дифференцированный</string>

    <string name="credit_start">Дата оформления</string>
    <string name="credit_sum">Сумма кредита</string>
    <string name="credit_rate">Процентная ставка</string>
    <string name="credit_term">Срок кредита</string>
    <string name="credit_rate_units">Процентная ставка (%)</string>
    <string name="credit_term_units">Срок кредита (В месяцах)</string>
    <string name="credit_first_payment">Первый платеж</string>
    <string name="credit_last_payment">Последний платеж</string>
    <string name="credit_month_payment">Ежемесячный платеж</string>
    <string name="credit_total_payments">Всего выплат</string>
    <string name="credit_over_payments">Переплата</string>
    <string name="credit_payment">Платеж</string>
    <string name="credit_payment_for_percent">Платеж в счет процентов</string>
    <string name="credit_payment_for_debt">Платеж в счет долга</string>
    <string name="credit_remaining_debt">Остаток долга</string>
    <string name="credit_save_calculation">Сохранить расчет</string>
    <string name="credit_calculation_name">Название расчета</string>
    <string name="credit_delete_calculation">Удалить расчет</string>
    <string name="credit_delete_calculation_confirmation">Вы уверены, что хотите удалить расчет \"%s\"?</string>
    <string name="credit_list_empty">Список расчетов пуст</string>

    <string name="credit_create_early_payment">Добавить досрочный платеж</string>
    <string name="credit_early_payment_sum">Сумма платежа</string>
    <string name="credit_early_payment_date">Дата платежа</string>
    <string name="credit_create_start_date_early_payment">Дата начала</string>
    <string name="credit_create_end_date_early_payment">Дата окончания</string>
    <string name="credit_create_end_date_early_payment_for_all_terms">На весь срок кредитования</string>
    <string name="credit_early_payment_decrease_payment">Уменьшение суммы платежа</string>
    <string name="credit_early_payment_decrease_term">Уменьшение срока кредита</string>

    <string name="credit_rate_type">Способ начисления процентов</string>
    <string name="credit_rate_frequency">Тип процентной ставки</string>
    <string name="credit_payment_frequency">Периодичность платежей</string>
    <string name="credit_early_payment">Досрочное погашение</string>
    <string name="credit_early_payment_type">Тип досрочного погашения</string>
    <string name="credit_early_payment_period_type">Регулярность погашения</string>
    <string name="credit_early_payment_every_year">Каждый год</string>

    <string name="credit_rate_changes">Изменение процентной ставки</string>

    <string name="credit_rate_every_year">Годовая процентная ставка</string>
    <string name="credit_rate_every_quarter">Квартальная процентная ставка</string>
    <string name="credit_rate_every_month">Месячная процентная ставка</string>

    <string name="credit_payment_every_year">Ежегодные</string>
    <string name="credit_payment_every_quarter">Ежеквартальные</string>
    <string name="credit_payment_every_month">Ежемесячные</string>

    <string name="credit_calculation_tab_general">Общее</string>
    <string name="credit_calculation_tab_payments">График платежей</string>

    <string name="calculate">Расчитать</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="edit">Редактировать</string>

    <string name="invalid_payment_too_small">Сумма платежа меньше, чем при 0% ставке</string>
    <string name="invalid_payment_too_much">Сумма платежа больше, чем при 100% ставке</string>
    <string name="invalid_calculation_name">Название не может быть пустым</string>
    <string name="invalid_value">Некорректное значение</string>

    <string name="error_unknown">Произошла ошибка</string>

    <string name="pie_chart_label_overpayments">Сумма процентов</string>
    <string name="pie_chart_label_credit_sum">Сумма долга</string>
    <string name="credit_parameters">Параметры кредита</string>
    <string name="preterm_payments">Досрочные платежи</string>

</resources>