<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="ru.rager.credit.domain.entity.CreditCalculationEntity.SchedulePaymentCreditCalculationEntity" />

        <import type="ru.rager.credit.presentation.util.binding.converters.oneway.DateMapper" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dp_8"
        app:cardElevation="@dimen/dp_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@{DateMapper.dateToString(data.calculationDate)}"
                android:textAppearance="@style/Text.Medium.18"
                tools:text="1 месяц" />

            <ru.rager.credit.presentation.view.LabeledTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@{@string/format_sum(data.payment)}"
                app:label="@string/credit_payment" />

            <ru.rager.credit.presentation.view.LabeledTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@{@string/format_sum(data.paidPercentSum)}"
                app:label="@string/credit_payment_for_percent" />

            <ru.rager.credit.presentation.view.LabeledTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:text="@{@string/format_sum(data.paidDebtSum)}"
                app:label="@string/credit_payment_for_debt" />

            <ru.rager.credit.presentation.view.LabeledTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:text="@{@string/format_sum(data.currentCreditRemainingDebtSum)}"
                app:label="@string/credit_remaining_debt" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>