<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ru.rager.credit.presentation.util.binding.converters.EnumBindingConverter" />

        <import type="ru.rager.credit.presentation.util.binding.converters.DateBindingConverter" />

        <variable
            name="viewModel"
            type="ru.rager.credit.presentation.ui.creditcalculator.CreditCalculatorViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back"
                app:onNavigationClick="@{()-> viewModel.onBack()}"
                app:title="@{EnumBindingConverter.mapCalculatorTypeToString(context, viewModel.calculatorType)}" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_content"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/credit_parameters"
                    android:textAppearance="@style/Text.Medium.20" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/credit_start_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:hint="@string/credit_start"
                    app:isVisible="@{viewModel.isCreditStartVisible}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/credit_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:cursorVisible="false"
                        android:drawableStart="@drawable/ic_credit_start"
                        android:drawablePadding="@dimen/dp_8"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        android:inputType="numberDecimal"
                        android:onClick="@{() -> viewModel.onSelectCreditStart()}"
                        android:text="@{DateBindingConverter.mapCalendarToToDateString(viewModel.creditStart)}"
                        android:textAppearance="@style/Text.Light.16"
                        app:drawableTint="?attr/colorPrimaryVariant" />

                </com.google.android.material.textfield.TextInputLayout>

                <ru.rager.credit.presentation.view.MaterialSpinner
                    android:id="@+id/rateType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    app:hint="@string/credit_rate_type"
                    app:selectedItem="@={viewModel.rateTypeSelected}"
                    app:startIconDrawable="@drawable/ic_credit_rate_type" />

                <ru.rager.credit.presentation.view.MaterialSpinner
                    android:id="@+id/ratePeriodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    app:hint="@string/credit_rate_frequency"
                    app:selectedItem="@={viewModel.ratePeriodSelected}"
                    app:startIconDrawable="@drawable/ic_credit_rate_period" />

                <ru.rager.credit.presentation.view.MaterialSpinner
                    android:id="@+id/paymentPeriodType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    app:hint="@string/credit_payment_frequency"
                    app:selectedItem="@={viewModel.paymentPeriodSelected}"
                    app:startIconDrawable="@drawable/ic_credit_payment_frequency" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/creditSumLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/credit_sum"
                    app:error="@{@string/invalid_value}"
                    app:errorIsVisible="@{!viewModel.isCreditSumValid}"
                    app:isVisible="@{viewModel.isCreditSumVisible}"
                    app:startIconDrawable="@drawable/ic_credit_amount">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/creditSum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.creditSum}"
                        android:textAppearance="@style/Text.Light.16" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/creditTermLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/credit_term_units"
                    app:error="@{@string/invalid_value}"
                    app:errorIsVisible="@{!viewModel.isCreditTermValid}"
                    app:isVisible="@{viewModel.isCreditTermVisible}"
                    app:startIconDrawable="@drawable/ic_credit_term">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/creditTerm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:text="@={viewModel.creditTerm}"
                        android:textAppearance="@style/Text.Light.16" />

                </com.google.android.material.textfield.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_2"
                    android:descendantFocusability="blocksDescendants"
                    tools:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/creditTermTemplateList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never" />

                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/creditRateList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_4"
                    android:elevation="@dimen/dp_8"
                    android:hint="@string/credit_rate_units"
                    app:error="@{@string/invalid_value}"
                    app:errorIsVisible="@{!viewModel.isCreditRateValid}"
                    app:isVisible="@{viewModel.isCreditRateVisible}"
                    app:startIconDrawable="@drawable/ic_credit_percent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/creditRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_credit_percent"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.creditRate}"
                        android:textAppearance="@style/Text.Light.16" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/creditPaymentLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_8"
                    android:hint="@string/credit_first_payment"
                    app:error="@{@string/invalid_value}"
                    app:errorIsVisible="@{!viewModel.isCreditPaymentValid}"
                    app:isVisible="@{viewModel.isCreditPaymentVisible}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/creditPayment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_credit_month_payment"
                        android:drawablePadding="@dimen/dp_8"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.creditPayment}"
                        android:textAppearance="@style/Text.Light.16"
                        app:drawableTint="?attr/colorPrimaryVariant" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:text="@string/preterm_payments"
                    android:textAppearance="@style/Text.Medium.20"
                    app:isVisible="@{viewModel.isPretermVisible &amp;&amp; viewModel.pretermPaymentList.size() > 0}" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pretermPaymentList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:overScrollMode="never"
                    app:isVisible="@{viewModel.isPretermVisible}"
                    tools:visibility="gone" />

                <Button
                    style="@style/MaterialButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:enabled="@{viewModel.isCalculateAvailable}"
                    android:text="@string/calculate"
                    app:onClickAndHideKeyboard="@{() -> viewModel.onCalculate()}" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>